--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@
   --cream-soft: #1a2f1e;
 }
 
+/* Test Fonts */
+
 /* body {
   background: var(--bg);
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
@@ -91,7 +93,6 @@ h1, h2, h3 {
 body {
   font-family: 'DM Sans', sans-serif;
 }
-
 
 .btn-primary {
   @apply bg-pistachio-dark text-white px-8 py-3 rounded-full
